plugins {
	id 'java-library'
	id 'maven-publish'
	id 'eclipse'
	id 'idea'
	id 'net.neoforged.gradle.userdev'
}

version = rootProject.version
group = 'RebornCore'

base {
	archivesName = 'reborncore'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

sourceSets.named('main').configure {
	java.srcDirs = ['src/main/java', 'src/client/java']
	resources.srcDirs = ['src/main/resources', 'src/main/generated']
}

tasks.named('processResources', ProcessResources).configure {
	def replaceProperties = [
		minecraft_version          : rootProject.minecraft_version,
		minecraft_version_range    : rootProject.minecraft_version_range,
		neo_version                : rootProject.neo_version,
		loader_version_range       : rootProject.loader_version_range,
		mod_id                     : 'reborncore',
		mod_name                   : 'Reborn Core',
		mod_license                : rootProject.mod_license,
		mod_version                : project.version,
	]
	inputs.properties replaceProperties
	filesMatching('META-INF/neoforge.mods.toml') {
		expand replaceProperties
	}
}

tasks.named('jar', Jar).configure {
	manifest {
		attributes([
			'Specification-Title'      : 'reborncore',
			'Specification-Vendor'     : 'Team Reborn',
			'Specification-Version'    : '1',
			'Implementation-Title'     : project.name,
			'Implementation-Version'   : project.version,
			'Implementation-Vendor'    : 'Team Reborn',
		])
	}
	// Avoid Windows "Unable to delete" when another process keeps build/libs/*.jar open.
	destinationDirectory = layout.buildDirectory.dir('mod-jar')
}

tasks.withType(Jar).configureEach {
	if (name == 'sourcesJar') {
		destinationDirectory = layout.buildDirectory.dir('mod-jar')
	}
}

runs {
	configureEach {
		systemProperty 'forge.logging.markers', 'REGISTRIES'
		systemProperty 'forge.logging.console.level', 'debug'
		workingDirectory layout.projectDirectory.dir('run').dir(name)
		modSource sourceSets.main
	}

	client {
		systemProperty 'neoforge.enabledGameTestNamespaces', 'reborncore'
	}

	server {
		systemProperty 'neoforge.enabledGameTestNamespaces', 'reborncore'
		argument '--nogui'
	}

	gameTestServer {
		systemProperty 'neoforge.enabledGameTestNamespaces', 'reborncore'
	}

	clientData {
		arguments.addAll '--mod', 'reborncore', '--all', '--output', file('src/generated/resources/').absolutePath, '--existing', file('src/main/resources/').absolutePath
	}
}

repositories {
	mavenCentral()
	maven {
		name = 'NeoForged'
		url = 'https://maven.neoforged.net/releases'
	}
	maven {
		name = 'Modrinth'
		url = 'https://api.modrinth.com/maven'
		content {
			includeGroup 'maven.modrinth'
		}
	}
	maven {
		name = 'FabricMC'
		url = 'https://maven.fabricmc.net/'
	}
	maven {
		name = 'REI'
		url = 'https://maven.shedaniel.me/'
		content {
			includeGroup 'me.shedaniel'
			includeGroup 'me.shedaniel.cloth'
			includeGroup 'dev.architectury'
		}
	}
	maven {
		name = 'Ladysnake Mods'
		url = 'https://maven.ladysnake.org/releases'
		content {
			includeGroup 'io.github.ladysnake'
		}
	}
	maven {
		name = 'IzzelAliz'
		url = 'https://maven.izzel.io/releases'
	}
}

dependencies {
	implementation "net.neoforged:neoforge:${rootProject.neo_version}"
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release = 25
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

def ENV = System.getenv()

publishing {
	publications {
		register('maven', MavenPublication) {
			groupId = 'reborncore'
			artifactId = project.base.archivesName.get() + '-' + (ENV.GITHUB_REF_NAME ?: 'local')
			version = project.version
			from components.java
		}
	}
	repositories {
		if (ENV.MAVEN_URL) {
			maven {
				url ENV.MAVEN_URL
				credentials {
					username ENV.MAVEN_USERNAME
					password ENV.MAVEN_PASSWORD
				}
			}
		}
	}
}

idea {
	module {
		downloadSources = true
		downloadJavadoc = true
	}
}
